# eshop

./: README.md  pyproject.toml  run.sh
data/: data_schemas.py  load_data.py
eshop/: app.py  main.py  metrics.py
tests/: conftest.py  test_client_working.py  test_eshop_version.py  test_json_api.py
