[tool.poetry]
name = "eshop"
version = "0.1.0"
description = "Python Challenge 2020 - Suade Labs"
authors = ["Manuel Mesa <manuelmesacano@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cerberus = "^1.3.2"
flask = "^1.1.2"
flask_restful = "^0.3.8"
sqlalchemy = "^1.3.16"
hypothesis = "^5.10.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.13.0"
black = "^19.10b0"
flake8 = "^3.7.9"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
